forcedotcom/src/objects/MessageStep__c.object
<CustomObject>
    <fields>
        <fullName>HTTPBodyFrom__c</fullName>
        <label>HTTP Body From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPBody__c</fullName>
        <label>HTTP Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HTTPEndpointFrom__c</fullName>
        <label>HTTP Endpoint From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HTTPEndpoint__c</fullName>
        <label>HTTP Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTPMethod__c</fullName>
        <label>HTTP Method</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTTP_Method_From__c</fullName>
        <label>HTTP Method From</label>
        <picklist>
            <picklistValues>
                <fullName>Literal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Source Object Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Message Steps</relationshipLabel>
        <relationshipName>MessageSteps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Message Step</label>
    <nameField>
        <label>Message Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>